--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,34 @@
-.DS_Store
-node_modules/
-# dist/
-report/
+# OS generated files #
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Vuejs build result and test
+dist/
+
+# Editor Files #
+*~
+*.swp
+.editorconfig
+.vs/
+.vscode/
+
+# Logs
+logs
+*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-test/unit/coverage
-test/e2e/reports
-selenium-debug.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+
+# Dependency directories
+node_modules
+jspm_packages
+
+# Optional npm cache directory
+.npm
