--- a/package.json
+++ b/package.json
@@ -1,118 +1,78 @@
 {
-  "name": "vue-typescript-simple-example",
+  "name": "captainachilles-vue",
   "version": "1.0.0",
-  "description": "vue-typescript-simple-example",
-  "author": "yunseop-kim <yunsub2@gmail.com>",
+  "description": "A Vue.js project",
+  "author": "Yunseop Kim <yunsub2@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "lint": "node lint.js -c .eslintrc.json --ext .js,.vue,.ts src/ test/",
+    "unit": "karma start test/unit/karma.conf.js",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue,.ts src test/unit/specs test/e2e/specs",
-    "lint:ts": "tslint -p ."
+    "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.2.2",
-    "vue-class-component": "^5.0.1",
+    "av-ts": "^0.8.2",
+    "vue": "^2.1.0",
     "vue-property-decorator": "^5.1.1",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
-    "@types/mocha": "^2.2.41",
-    "@types/node": "^8.0.10",
-    "@types/sinon": "^2.1.2",
-    "@types/sinon-chai": "^2.7.27",
-    "@types/webpack": "^3.0.4",
-    "@types/webpack-env": "^1.13.0",
+    "@types/mocha": "^2.2.40",
     "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
     "chai": "^4.1.0",
     "chalk": "^2.0.1",
     "chromedriver": "^2.27.2",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.4",
+    "nightwatch": "^0.9.12",
+    "selenium-server": "^3.0.1",
+    "connect-history-api-fallback": "^1.1.0",
+    "css-loader": "^0.28.0",
     "eslint": "^4.2.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.6.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-tslint": "^1.0.2",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.0",
+    "file-loader": "^0.11.1",
+    "function-bind": "^1.0.2",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.17.2",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "json-loader": "^0.5.4",
     "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.2.4",
-    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
     "mocha": "^3.2.0",
-    "nightwatch": "^0.9.12",
+    "node-sass": "^4.5.1",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.1.0",
+    "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "postcss-load-config": "^1.2.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-salad": "^2.0.1",
-    "pug": "^2.0.0-rc.1",
-    "pug-loader": "^2.3.0",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "sugarss": "^1.0.0",
+    "sass-loader": "^6.0.3",
+    "shelljs": "^0.7.4",
+    "style-loader": "^0.18.2",
     "ts-loader": "^2.0.3",
-    "tslint": "^5.1.0",
-    "tslint-loader": "^3.5.2",
-    "typescript": "^2.3.3",
+    "typescript": "^2.1.4",
     "typescript-eslint-parser": "^4.0.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.2.4",
+    "vue-template-compiler": "^2.1.0",
     "webpack": "^3.2.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
-    "node": ">= 4.0.0",
+    "node": ">= 6.9.5",
     "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 5 versions",
-    "not ie <= 8"
-  ]
+  }
 }
